--- a/src/css/style.css
+++ b/src/css/style.css
@@ -418,7 +418,7 @@ ul.order li button {
   border: 0;
   display: none;
   line-height: 1;
-  padding: 0;
+  padding: 0 0.25rem;
 }
 ul.order li.total {
   font-weight: 600;
