--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -128,7 +128,7 @@ ul.order
       border 0
       display none
       line-height 1
-      padding 0
+      padding 0 .25rem
     &.total
       font-weight 600
       border-bottom 3px solid black
